ContentQueries: tokens.getFirst